# QtProject

./: .qmake.stash  CMakeLists.txt  CommSetWidget.cpp  ContralDataWidget.cpp  ContralDataWidget.h  ControlWnd.cpp  Makefile  Makefile.Debug  Makefile.Release  SleepInterventionWidget.cpp  SleepMonitor.pro  aa.py  linkport.cpp  linkport.h  linkport.ui  lqp.pro  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  pic.qrc  plot_eeg.cpp  plot_result.cpp  qcustomplot.cpp  readme.md  savefilepath.cpp  savefilepath.h  savefilepath.ui  showtime.cpp  showtime.h  sleepinterventionwidget.ui  temp.py  thread_plot_raw_eeg.cpp  thread_receive.cpp  thread_receive.h  thread_showtime.cpp  ui_linkport.h  ui_mainwindow.h  ui_savefilepath.h  (+1 more)
release/: aa.py  moc_ContralDataWidget.cpp  moc_linkport.cpp  moc_mainwindow.cpp  moc_savefilepath.cpp  moc_sleepinterventionwidget.cpp  moc_thread_plot_raw_eeg.cpp  moc_thread_receive.cpp  moc_thread_showtime.cpp  qrc_pic.cpp  temp.py
src/: UserInfoStruct.h  checkinfowidget.cpp  checkinfowidget.h  checkinfowidget.ui  initinfowidget.cpp  initinfowidget.h  initinfowidget.ui  jsonoperate.cpp  jsonoperate.h  renewinfowidget.cpp  renewinfowidget.h  renewinfowidget.ui  userinfowidget.cpp  userinfowidget.h  userinfowidget.ui
test/: CMakeLists.txt  main.cpp
